--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "next": "10.0.1",
+    "number-magic": "^1.3.0",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
